[package]
name = "handlevec"
version = "0.1.0"
edition = "2021"
description = "Small abstraction over index-style iteration over a vector, with deletion, insertion, and other operations on the vector while iterating."
repository = "https://github.com/torstein-vik/handlevec"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["iteration", "vectors", "index-iteration"]
categories = ["rust-patterns"]

[dependencies]
